--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,22 @@
-.App-header {
-  margin: 30px 0;
-  text-align: center;
+body {
+  background: #f9f8fe;
 }
 
+a {
+  color: #9670f4;
+}
 
+.App-header {
+  margin: 30px;
+}
 
-.shecodes {
+.App-logo {
+  max-width: 200px;
   display: block;
   margin: 0 auto;
 }
 
 .App-footer {
- text-align: center;
- margin: 30px 0;
+  text-align: center;
+  margin: 30px 0;
 }
