--- a/src/Dictonary.css
+++ b/src/Dictonary.css
@@ -1,3 +1,20 @@
-.Dictonary {
-    text-align: center;
+.Dictonary section {
+    background: white;
+    padding: 30px;
+    border-radius: 6px;
+    box-shadow: 0px 10px 10px rgb(0, 0, 0, 10%);
+    margin: 20px 0;
+}
+
+.Dictonary input {
+  width: 100%;
+  border-radius: 6px;
+  padding: 6px 4px;
+  color: #333;
+  border: 1px solid #ddd;
+}
+
+.Dictonary .hint{
+  font-size: 11px;
+  margin-top: 5px;
 }
