--- a/src/Dictonary.css
+++ b/src/Dictonary.css
@@ -1,8 +1,14 @@
+.Dictonary h1 {
+    font-size: 32px;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
 .Dictonary section {
     background: white;
     padding: 30px;
     border-radius: 6px;
-    box-shadow: 0px 10px 10px rgb(0, 0, 0, 10%);
+    box-shadow: 0px 20px 10px rgb(0, 0, 0, 10%);
     margin: 20px 0;
 }
 
